# kiosk

./: .gitignore  LICENSE  README.md
source/: CMakeLists.txt  def_version.h  project_version.h.in  sversion.h
source/apps/kiosk/: CMakeLists.txt  kiosk.rc  main_linux.cc  main_win.cc  paths.h.in  version.h.in
source/apps/kiosk-apps/: .gitignore  CMakeLists.txt
source/apps/kiosk-apps/default/: index.html  panel.css  panel.js
source/apps/kiosk-apps/default/css/: panel.css  widget.css
source/apps/kiosk-apps/default/js/: storage.js
source/apps/kiosk-apps/default/widgets/: widget.css
source/apps/kiosk-apps/default/widgets/clock/: index.html
source/apps/kiosk-apps/default/widgets/system_bar/: index.html
source/apps/panel/: CMakeLists.txt  embed.cc  embed.h  embed_win.cc  kiosk.cc  kiosk.h  main.cc  main_linux.cc  panel.rc  runtime.cc  runtime.h  version.h.in
source/apps/panel/html/: .default.html  berry.json
source/apps/panel/html/widgets/clock/: clock.js  index.html
source/apps/pphue/: CMakeLists.txt
source/apps/pphue/pp/: instance.cc  instance.h  module.cc
source/apps/runtime/: CMakeLists.txt  embed.cc  embed_linux.cc  kiosk.cc  main_win.cc  runtime.cc  runtime_linux.cc
source/common/: main_common.h  switches.h
source/kiosk/: CMakeLists.txt  main_kiosk.h  main_kiosk_linux.cc  main_kiosk_win.cc  main_linux.cc  main_win.cc  paths.h.in  paths_kiosk.h.in  resource.h  version.h.in
source/kiosk-apps/: CMakeLists.txt  index.html.txt
source/kiosk-apps/default/: index.html
source/libs/: CMakeLists.txt
source/libs/nacl/: CMakeLists.txt
source/libs/nacl/src/jsoncpp/: Makefile
source/libs/nacl/src/ppapi/: Makefile
source/libs/nacl/src/ppapi_cpp/: Makefile
source/libs/nacl/src/ppapi_cpp_private/: Makefile
source/libs/nacl/src/ppapi_gles2/: Makefile
source/libs/nacl/src/sdk_util/: Makefile
source/plugins/pphue/: CMakeLists.txt  version.h.in
source/runtime/: CMakeLists.txt  embed.cc  embed.h  embed_win.cc  kiosk.cc  kiosk.h  main_runtime.h  main_runtime_linux.cc  main_runtime_win.cc  main_win.cc  paths.h.in  paths_runtime.h.in  ptr.h  runtime.cc  runtime.h  runtime.rc  runtime_win.cc  template.cc  template.h  version.h.in
tools/: make_template.py
